commit en rama1 generador dominio despues de crear la rama

--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,13 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+.resultado {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.resultado span {
+  margin: 5px;
+  white-space: pre;
+}
